recursion.lessons.recursion.koch.PentaKoch.scala.error
PentaKoch:13: error: not found: value doirte
		doirte(72)
                ^